# controle-financeiro

./: .env  .env.example  .gitignore  Dockerfile  README.md  agent.md  alembic.ini  controle_financeiro.db  docker-compose.yml  feature.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5f9c3a7b2d1e_add_purchase_price_and_transactions.py  61f5ca4cd77f_create_initial_tables.py  7a9d3b1f4c2c_add_audit_logs_table.py  8c2f1b4d5a7a_add_investment_assets_table.py  a1b2c3d4e5f6_drop_audit_logs_table.py  bb8a7514b4ee_banco_unificado_v1.py  d191e4391174_add_owner_id_to_transactions.py  e5f6a7b8c9d0_add_tipos_and_categorias.py
app/: auth.py  config.py  insights.py  investments.py  main.py  models.py  profile.py  settings.py  transactions.py
app/static/: carteira-investimento.html  index.html
app/static/css/: style.css
app/static/js/: app.js
backend/app/: __init__.py  crud.py  database.py  finance.py  main.py  models.py  schemas.py
backend/tests/: test_auth_csv.py
frontend/: carteira-investimento.html  index.html
frontend/css/: style.css
frontend/js/: app.js  charts.js  investments.js
scripts/: alembic_stamp_head_if_needed.py  import_csv.py
src/: index.html
src/pages/: carteira-investimento.css  carteira-investimento.html  carteira-investimento.js
src/server/db/migrations/: 20260624_create_carteira_investimento.js
src/server/models/: CarteiraInvestimento.js
src/server/routes/: carteira-investimento.js
src/server/utils/: yahooFinanceCache.js
