[project]
name = "controle-financeiro"
version = "0.2.0"
description = "Aplicação Streamlit para controle financeiro mensal com editor interativo e gráficos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
